added boundary detection, fixed escape button on index page

--- a/battleships.html
+++ b/battleships.html
@@ -34,12 +34,10 @@
 						len="2"
 						checked
 						type="checkbox"
-						id="config10"
+						id="config12"
 					/>Length: 2<br />
-					<input onclick="un_check(this)" len="3" type="checkbox" id="config11" />Length:
-					3<br />
-					<input onclick="un_check(this)" len="2" type="checkbox" id="config12" />Length
-					4:<br />
+					<input onclick="un_check(this)" type="checkbox" id="config13" />Length: 3<br />
+					<input onclick="un_check(this)" type="checkbox" id="config14" />Length 4:<br />
 				</form>
 			</li>
 			<li>
