speperate player compatibilty

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
 				<p>Some of the stuff I decided to tinker with:</p>
 				<a href="/pattern.html">
 					<div class="boxforlink">
-						<p>Pattern lock - Android style</p>
+						<h3>Pattern lock - Android style</h3>
 					</div>
 				</a>
 				<a href="/cipher.html">
 					<div class="boxforlink">
-						<p>Morse code translator, ceaser cipher, vernham cipher</p>
+						<h3>Morse code translator, ceaser cipher, vernham cipher</h3>
 					</div>
 				</a>
 				<a href="/battleships.html">
 					<div class="boxforlink">
-						<p>Battleships</p>
+						<h3>Battleships</h3>
 					</div>
 				</a>
 			</div>
