--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 		<div id="main">
 			<div include="assets/global.Includes/header.html"></div>
 			<div class="bigbox">
+				<meta name="author" content="charlie aylott" />
+				<meta name="author" content="chazzox" />
 				<h2>Introduction</h2>
 				<p>
-					This is my website. I use this to display different programs I have written in
-					the past and ones I intend on writing. In the future
+					This is my website. I use this to display different programs I have written in the
+					past and ones I intend on writing. In the future
 				</p>
 				<p>
 					The website's function is to publish the code projects that I like to work on
@@ -31,7 +33,7 @@
 				</p>
 			</div>
 
-			<div class="bigbox">
+			<!-- <div class="bigbox">
 				<h2>My CV</h2>
 				<p>
 					This site is also a place where I can hold my CV online and you can find that
@@ -40,15 +42,15 @@
 				<a href="cv.html"
 					><div class="boxforlink"><h3>My CV</h3></div></a
 				>
-			</div>
+			</div> -->
 
 			<div class="bigbox">
 				<h2>Silly things</h2>
 				<p>
-					I made couple things just to put on the website to show what I can do currently
-					- these are just websites so and not really where my interests lie. The next
-					thing to do is actually make the site because I don't have any links to them at
-					the moment, although they do exist in the website file structure
+					I made couple things just to put on the website to show what I can do currently -
+					these are just websites so and not really where my interests lie. The next thing
+					to do is actually make the site because I don't have any links to them at the
+					moment, although they do exist in the website file structure
 				</p>
 				<a href="javascript:void(0)" id="proj">
 					<div id="changPad" class="boxforlink">
@@ -56,9 +58,9 @@
 					</div>
 				</a>
 				<p>
-					I wouldn't expect anything to be done here once evrything is done, this is
-					because im trying to focus on my hardware skills, I might post about it here
-					when a big project is done.
+					I wouldn't expect anything to be done here once evrything is done, this is because
+					im trying to focus on my hardware skills, I might post about it here when a big
+					project is done.
 				</p>
 			</div>
 			<div id="footer" include="assets/global.Includes/footer.html"></div>
