cv cringe, favicon kek

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html id="lol">
 	<head>
-		<title>Charlie's website</title>
+		<title>Chazzox's website</title>
 		<meta charset="utf-utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/assets/global/scripts/global.css" />
@@ -22,8 +22,7 @@
 				<meta name="author" content="chazzox" />
 				<h2>Introduction</h2>
 				<p>
-					This is my website. I use this to display different programs I have written in the
-					past and ones I intend on writing. In the future
+					Henlo, 
 				</p>
 				<p>
 					The website's function is to publish the code projects that I like to work on
@@ -32,17 +31,6 @@
 					that would enable to me practice my design skilss. Which are slightly lacking
 				</p>
 			</div>
-
-			<!-- <div class="bigbox">
-				<h2>My CV</h2>
-				<p>
-					This site is also a place where I can hold my CV online and you can find that
-					here:
-				</p>
-				<a href="cv.html"
-					><div class="boxforlink"><h3>My CV</h3></div></a
-				>
-			</div> -->
 
 			<div class="bigbox">
 				<h2>Silly things</h2>
