formatting and style changes

--- a/assets/global.Includes/footer.html
+++ b/assets/global.Includes/footer.html
@@ -5,17 +5,16 @@
 				src="assets/homepage/imgs/twitter.png"
 				class="footerButtonIcon"
 				align="left"
-			/>@_chazzox_
+			/><span class="footerLinkText">@_chazzox_</span>
 		</div>
 	</a>
 
 	<a href="https://github.com/chazzox">
 		<div class="footerButton" style="background: linear-gradient(to right, #AA4DB4 , #8A3699)">
-			<img
-				src="assets/homepage/imgs/github.png"
-				class="footerButtonIcon"
-				align="left"
-			/>chazzox
+			<img src="assets/homepage/imgs/github.png" class="footerButtonIcon" align="left" /><span
+				class="footerLinkText"
+				>chazzox</span
+			>
 		</div>
 	</a>
 
@@ -25,16 +24,15 @@
 				src="assets/homepage/imgs/instagram.png"
 				class="footerButtonIcon"
 				align="left"
-			/>@charlie_aylott
+			/><span class="footerLinkText">@charlie_aylott</span>
 		</div>
 	</a>
 
 	<div class="footerButton" style="background: linear-gradient(to right, #83A1DA , #6380B4)">
-		<img
-			src="assets/homepage/imgs/discord.png"
-			class="footerButtonIcon"
-			align="left"
-		/>Chazzox&#35;8286
+		<img src="assets/homepage/imgs/discord.png" class="footerButtonIcon" align="left" /><span
+			class="footerLinkText"
+			>Chazzox&#35;8286</span
+		>
 	</div>
 	<p>A huge thank you to my friend who helped massively in the development of the site.</p>
 	<a href="https://pinpal.github.io/">
