--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="/assets/global/scripts/global.css" />
 		<link rel="stylesheet" href="/assets/homepage/scripts/style.css" />
 		<link rel="shortcut icon" type="image/x-icon" href="/assets/global/other/favicon.ico" />
+		<meta name="google-site-verification" content="ZNKmWP18vZXTTbX5TIxztrzDVJdQTPCJavz4NQ5yGXU" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
 			rel="stylesheet"
