--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!-- icon made by https://www.flaticon.com/authors/photo3idea_studio/lineal-color this is used under an attributed licence  -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
