removed un-needed sites, changed scss

--- a/public/cv.html
+++ b/public/cv.html
@@ -1,1 +1,3 @@
-<meta http-equiv="refresh" content="0; cv" />
+<head>
+	<meta http-equiv="refresh" content="0; URL=https://chazzox.github.io/#/cv" />
+</head>
