--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 		<link rel="icon" type="image/png" href="/favicon.ico" />
-		<link rel="stylesheet" href="/global.css" />
-		<link rel="stylesheet" href="/build/bundle.css" />
-
+		<link rel="stylesheet" href="/build/global.css" />
+		<!-- <link rel="stylesheet" href="/build/bundle.css" /> -->
 		<script defer src="/build/bundle.js"></script>
 	</head>
-
 	<body></body>
 </html>
