--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/png" href="/favicon.ico" />
-		<link rel="stylesheet" href="/build/global.css" />
-		<!-- <link rel="stylesheet" href="/build/bundle.css" /> -->
-		<script defer src="/build/bundle.js"></script>
+		<link rel="stylesheet" href="/app.css" />
+		%svelte.head%
 	</head>
-	<body></body>
+	<body>
+		<div id="main">%svelte.body%</div>
+	</body>
 </html>
