--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="image" content="/images/screenshot.jpg" />
+		<meta name="image" property="og:image" content="/images/screenshot.jpg" />
 		<link rel="icon" type="image/png" href="/favicon.ico" />
 		<link rel="stylesheet" href="/app.css" />
 		%svelte.head%
