--- a/src/app.html
+++ b/src/app.html
@@ -6,9 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="image" property="og:image" content="/images/screenshot.jpg" />
 		<link rel="icon" type="image/png" href="/favicon.ico" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
-		<div id="main">%svelte.body%</div>
+		<div id="main">%sveltekit.body%</div>
 	</body>
 </html>
